// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField rendering renders expected elements 1`] = `
<div
  className="ToggleField"
>
  <div
    className="ToggleField__label"
  >
    <Label
      id="random-id-label"
      text="Test"
    />
  </div>
  <Toggle
    aria-labelledby="random-id-label"
    checked={true}
    className="ToggleField__field"
    disabled={true}
    getSideLabel={[MockFunction]}
    id="random-id"
    onChange={[Function]}
  />
</div>
`;

exports[`ToggleField rendering renders expected elements when className is set 1`] = `
<div
  className="ToggleField TestClass"
>
  <div
    className="ToggleField__label"
  >
    <Label
      id="random-id-label"
      text="Test"
    />
  </div>
  <Toggle
    aria-labelledby="random-id-label"
    checked={true}
    className="ToggleField__field"
    getSideLabel={[MockFunction]}
    id="random-id"
    onChange={[Function]}
  />
</div>
`;
